[package]
name = "wallpaper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wallpaper_bin"
path = "src/main.rs"

[lib]
name = "wallpaper_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
nannou = { version="0.18.1", git ="https://github.com/nannou-org/nannou.git", rev = "287be8a4d075b17332ca0bf34649f5d25e751c00", features =["wasm-experimental"]}
rand_derive2 = "0.1.21"
palette = "0.7.6"
winit = "0.28.7"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
